# strong-bootcamp

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/actions/slack/: action.yml
.github/actions/venv-setup/: action.yml
.github/workflows/: deploy.yml
bootcamp/: bootcamp.py  cli.py
example/: bootcamp.yml  camp.py  example.py  models.yml
example/models/: linear.py  loglinear.py
